# learning-c

./: .gitignore
c-pong/: .editorconfig  CMakeLists.txt
c-pong/src/: app.c  app.h  ball.c  ball.h  main.c  paddle.c  paddle.h
derek-banas/c-tutorial/: README.md
derek-banas/c-tutorial/video1/: convertion  convertion.c  operations  operations.c  operators  operators.c  printingValues  printingValues.c  scanf  scanf.c
derek-banas/c-tutorial/video2/: andOrNot  andOrNot.c  comparison  comparison.c  dowhileloop  dowhileloop.c  forloop  forloop.c  howBig  howBig.c  sizeof  sizeof.c  whileloop  whileloop.c
derek-banas/c-tutorial/video3/: a.out  dowhile.c  functions.c  strings.c
derek-banas/c-tutorial/video4/: ArraysAndPointers  ArraysAndPointers.c  RandomNumbers  RandomNumbers.c  memoryAndPointers  memoryAndPointers.c
derek-banas/c-tutorial/video5/: Makefile
derek-banas/c-tutorial/video5/src/: structs.c
derek-banas/c-tutorial/video6/: Makefile
derek-banas/c-tutorial/video6/src/: linked-lists.c  unions.c
derek-banas/c-tutorial/video7/: Makefile
derek-banas/c-tutorial/video7/src/: bool-str-char.c  bool.c  char.c  chars.c  str.c  strings.c
derek-banas/c-tutorial/video8/: Makefile  main1.c  main2.c
derek-banas/c-tutorial/video9/: Makefile
derek-banas/c-tutorial/video9/src/: linked-list.c  linked-list2.c
mycode/calculator/: .gitignore  Makefile  run
mycode/calculator/src/: main.c
